Minor layout fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">simplistic</string>
-    <string name="add_task">add task</string>
+    <string name="add_task">enter task name</string>
     <string name="add">+</string>
     <string name="back">back</string>
     <string name="task_name">task name</string>
